WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50188
bunch of pixel failures after
http://trac.webkit.org/changeset/72839/
https://bugs.webkit.org/show_bug.cgi?id=50188
Summary
bunch of pixel failures after http://trac.webkit.org/changeset/72839/
Ojan Vafai
Reported
2010-11-29 16:34:02 PST
broke reflections: fast/layers/normal-flow-hit-test.html,fast/reflections/abs-position-in-reflection.html,fast/reflections/opacity-reflection-transform.html,fast/reflections/reflection-direction.html,fast/reflections/reflection-masks-opacity.html,fast/reflections/reflection-masks.html,fast/reflections/reflection-nesting.html,fast/reflections/reflection-overflow-hidden.html,fast/reflections/transparent-reflected-sublayers.html,fast/repaint/reflection-redraw.html,fast/repaint/reflection-repaint-test.html Not sure what's wrong with this one: fast/transforms/transform-table-row.html missing png/checksum files: fast/overflow/overflow-update-transform.html
Attachments
Patch
(40.88 KB, patch)
2010-11-29 16:45 PST
,
Simon Fraser (smfr)
ojan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2010-11-29 16:45:30 PST
Created
attachment 75083
[details]
Patch
Ojan Vafai
Comment 2
2010-11-29 16:50:19 PST
Comment on
attachment 75083
[details]
Patch Looks consistent with
r72839
. Thanks for the quick fix.
Simon Fraser (smfr)
Comment 3
2010-11-29 16:53:32 PST
http://trac.webkit.org/changeset/72850
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug