2010-11-29  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Ojan Vafai.

        bunch of pixel failures after http://trac.webkit.org/changeset/72839/
        https://bugs.webkit.org/show_bug.cgi?id=50188

        We need to call updateLayerTransform() for reflections, and
        table rows as well.

        * rendering/RenderReplica.cpp:
        (WebCore::RenderReplica::layout):
        * rendering/RenderTableRow.cpp:
        (WebCore::RenderTableRow::layout):
        * rendering/RenderTableSection.cpp:
        (WebCore::RenderTableSection::layoutRows):

Canonical link: https://commits.webkit.org/63309@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72850 268f45cc-cd09-0410-ab3c-d52691b4dbfc